--- a/membership.html
+++ b/membership.html
@@ -162,6 +162,7 @@
 <!-- Scripts -->
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="js/jquery.appear.js"></script>
 <script src="js/script.js"></script>
 
 </body>
